@@ -1,4 +1,4 @@
-m4trace:configure.ac:5: -1- AC_INIT([libquickmail], [0.1.12])
+m4trace:configure.ac:5: -1- AC_INIT([libquickmail], [0.1.13])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -146,7 +146,7 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.ac:5: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE([libquickmail], [0.1.12])
+m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE([libquickmail], [0.1.13])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.11.1])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
@@ -169,7 +169,7 @@ m4trace:configure.ac:6: -1- m4_pattern_allow([^CYGPATH_W$])
 m4trace:configure.ac:6: -1- AC_SUBST([PACKAGE], [libquickmail])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([PACKAGE])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^PACKAGE$])
-m4trace:configure.ac:6: -1- AC_SUBST([VERSION], [0.1.12])
+m4trace:configure.ac:6: -1- AC_SUBST([VERSION], [0.1.13])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([VERSION])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.ac:6: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE])
